notes/kubernetes/cks/manifests/cilium/allow-all-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-egress
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - all
