notes/kubernetes/cks/manifests/cilium/allow-egress-to-all-resources.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-all-resources
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - world
