notes/kubernetes/cks/manifests/cilium/allow-egress-to-internet-443.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-internet-443
  namespace: default
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
