notes/kubernetes/cks/manifests/cilium/allow-within-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-within-namespace
  namespace: web
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels: {}
