notes/kubernetes/cks/manifests/cilium/database-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: database-policy
  namespace: cilium-lab
spec:
  endpointSelector:
    matchLabels:
      tier: database
  ingress:
    - {}
  egress:
    - {}
