notes/kubernetes/cks/manifests/cilium/default-allow-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
    - world
  egress: 
    - toEntities:
      - world
